--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viz Tech 2 | Week 6</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <title>Week 6 - Force Layout</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.5.0/d3.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Force layout</h1>
-        <svg>
-
-        </svg>
+        <h1>Airbnb Prices in Boston</h1>
+        <label for="switch" id="switch_label">Radial Layout</label>
+        <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+        </label>
+        <p class="alert">If the radial layout becomes disorganized, please refresh the page, thanks!</p>
+        <svg></svg>
     </div>
     <script src="script.js"></script>
 </body>
